...
                style="@style/Widget.UnifiedComms.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Server URL"
                    android:inputType="textUri"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
