...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calendar"
                android:textColor="#666666"
                android:textSize="9sp" />
            <TextView
                android:id="@+id/widget_unified_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tasks"
                android:textColor="#666666"
                android:textSize="9sp" />
            <TextView
                android:id="@+id/widget_unified_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
